# Laboratory-works-sem2-2020-2021-academic-year

./: README.md
lab1a/: README.txt
lab1a/UML/: beforeReafactoring.vpp  beforeReafactoring.vpp.bak_000f  beforeReafactoring.vpp.bak_003d  beforeReafactoring.vpp.bak_004d  beforeReafactoring.vpp.bak_006d  beforeReafactoring.vpp.bak_007d  beforeReafactoring.vpp.bak_008d
lab1a/UML/project/: beforeReafactoring.vpp  beforeReafactoring.vpp.bak_001d  beforeReafactoring.vpp.bak_002d  beforeReafactoring.vpp.bak_005d  beforeReafactoring.vpp.bak_009d  beforeReafactoring.vpp.bak_010d  beforeReafactoring.vpp.bak_011d  beforeReafactoring.vpp.bak_012d  beforeReafactoring.vpp.bak_013d  beforeReafactoring.vpp.bak_014d
lab1a/src/: CMakeLists.txt  MessageLog.cpp  MessageLog.h  functions.cpp  functions.h  main.cpp  message.cpp  message.h  modes.cpp  modes.h
lab1a/src/test/: doctest.h  doctest_main.cpp  tests.cpp
lab3a/: CMakeLists.txt  main.cpp
lab3a/src/: Matrix.cpp  Matrix.h  Matrix.hpp  Matrix.hxx
